Repair background on small devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,7 +54,7 @@ a:hover {
   font-family: 'Poppins', sans-serif;
   margin: 10px auto;
   color: black;
-  background-color: white;
+  background-color: #ffffff;
   position: absolute;
   top: 0px;
   left: 10px;
@@ -157,7 +157,7 @@ main.landing-page {
 }
 
 .platform-bottom-pane {
-  background-color: white;
+  background-color: #ffffff;
   height: 100%;
 }
 
@@ -334,7 +334,7 @@ footer .company-mission {
 .platform-section .left-upper-pane,
 .platform-section .right-upper-pane {
   position: relative;
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .platform-section .left-upper-pane {
@@ -358,11 +358,11 @@ footer .company-mission {
 
 .features-section {
   position: relative;
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .partners-section {
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .partners-section > div > .row {
@@ -439,9 +439,18 @@ footer .company-mission {
   background-color: #f7f9fb;
 }
 
+.technology-section {
+  background-color: #ffffff;
+}
+
+.technology-section > div > .row {
+  position: relative;
+}
+
 .technology-section .background-panes {
-  background-color: white;
+  background-color: #ffffff;
   border-bottom: 2px solid #f7f9fb;
+  bottom: 0;
 }
 
 .technology-section .left-lower-pane,
@@ -555,7 +564,7 @@ footer .company-mission {
 }
 
 .email-section {
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .email-section form {
